--- a/src/main/resources/public/style.css
+++ b/src/main/resources/public/style.css
@@ -1,7 +1,33 @@
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #20B2AA;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
+}
+
+
 h1 {
 margin: 0px;
-text-color: #EDEDFB;
-background-color: #FF0000;
+text-color: #708090;
+background-color: #778899;
 justify-content: center;
 text-align: left;
 padding: 20px;
@@ -10,20 +36,6 @@ font-style: normal;
 font-weight: 500;
 line-height: 26.4px;
 }
-
-.pageheader {
-margin: 0px;
-text-color: #EDEDFB;
-background-color: #FF0000;
-justify-content: center;
-text-align: left;
-padding: 20px;
-font-family: "Gravitas One";
-font-style: normal;
-font-weight: 500;
-line-height: 26.4px;
-}
-
 
 head {
 margin: 0px;
@@ -31,7 +43,6 @@ margin: 0px;
 
 body {
 margin: 0px;
-background-color: #708090;
 }
 
 .navbar {
@@ -39,4 +50,18 @@ background-color: #FF0000;
 text-align: left;
 padding: 15px;
 text-color: white;
+}
+
+.floating-box {
+    background-color: #778899;
+    display: inline-block;
+    width: 150px;
+    height: 75px;
+    margin: 10px;
+    border: 3px solid #20B2AA;
+}
+
+.newsPageTitle{
+    background-color: width: #778899;
+    width: 100;
 }
