--- a/src/main/resources/public/style.css
+++ b/src/main/resources/public/style.css
@@ -23,6 +23,8 @@ li a:hover {
     background-color: #111;
 }
 
+tr:hover {background-color: #f5f5f5;}
+
 
 h1 {
 margin: 0px;
@@ -35,6 +37,14 @@ font-family: "Gravitas One";
 font-style: normal;
 font-weight: 500;
 line-height: 26.4px;
+}
+
+h2 {
+
+text-color: #778899;
+background-color: #778899;
+font-family: "Gravitas One";
+
 }
 
 head {
@@ -67,3 +77,4 @@ text-color: white;
     background-color: width: #778899;
     width: 100;
 }
+
