--- a/src/main/resources/public/style.css
+++ b/src/main/resources/public/style.css
@@ -37,14 +37,27 @@ font-family: "Gravitas One";
 font-style: normal;
 font-weight: 500;
 line-height: 26.4px;
+height: 60px;
 }
 
 h2 {
-
-text-color: #778899;
-background-color: #778899;
+text-align: center;
+color: #008080;
+background-color: #DCDCDC;
 font-family: "Gravitas One";
+width: 100%;
 
+}
+
+h3{
+text-align: center;
+color: #008080;
+font-family: "Gravitas One";
+}
+
+h4{
+color: #0000FF;
+font-family: "Courier";
 }
 
 head {
@@ -78,3 +91,28 @@ text-color: white;
     width: 100;
 }
 
+.logo{
+padding: 0px;
+align: top;
+height: 150%;
+width: 30%;
+justify-content: center;
+
+
+}
+
+form {
+ display: flex;
+ justify-content: center;
+ flex-direction: column;
+}
+
+.floating-box {
+   vertical-align: text-top;
+   background-color: #778899;
+   display: inline-block;
+   width: 350px;
+   height: 300px;
+   margin: 10px;
+   border: 3px solid #20B2AA;
+}
